# qcorrect

./: .gitignore  .pre-commit-config.yaml  README.md  devenv.nix  justfile  pyproject.toml  release-please-config.json  ruff.toml
.github/workflows/: pull-request.yml
examples/: codedef.py  example.py  example_code.ipynb
src/qcorrect/: __init__.py  allocation.py  decorator.py  lowerable.py  tys.py
tests/: test_allocation.py  test_codedef.py  test_lowering.py  test_self_use.py
