[project]
name = "qcorrect"
version = "0.1.0"
description = "Quantinuum error correction tools"
license = {file = "LICENCE"}
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "guppylang~=0.20",
    "hugr>=0.12.2",
    "ruff>=0.12.1",
]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"}
]
lint = [
    "ruff>=0.12.1",
]
test = [
    "ipykernel>=6.29.5",
]
