[project]
name = "qcorrect"
version = "0.1.0"
description = "Quantinuum error correction tools"
license = {file = "LICENCE"}
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "guppylang~=0.21",
    "hugr>=0.12.2",
    "ruff>=0.12.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"}
]
lint = [
    "mypy>=1.18.2",
    "ruff>=0.12.1",
]
test = [
    "ipykernel>=6.29.5",
    "pytest>=8.4.1",
]


[tool.mypy]
strict = true
allow_redefinition = true